<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/sv_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:background="@color/colorWhite"
        tools:context=".ui.authentication.login.LoginActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/sub_main_layout"
    >


        <ImageView
                android:id="@+id/iv_back"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:padding="@dimen/_4sdp"
                android:layout_margin="@dimen/_10sdp"
                app:srcCompat="@drawable/ic_ico_back_login"/>


        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                app:srcCompat="@drawable/ic_logo_login"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="vertical">


            <TextView
                    style="@style/mediumProductBoldStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textColor="@color/colorBlack"/>

            <EditText
                    android:id="@+id/et_username"
                    style="@style/mediumProductRegularStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@null"
                    android:inputType="text"
                    android:hint="@string/username"
                    android:singleLine="true"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                    android:textColorHint="@color/colorGray1"
            />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.2dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/colorGray1"/>

            <TextView
                    android:id="@+id/error_username"
                    style="@style/ExtraProductRegularStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_9sdp"
                    android:text="@string/please_enter_your_user_name"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:visibility="gone"
                    android:textColor="@color/colorOrange"
            />


            <EditText
                    android:id="@+id/et_pass"
                    style="@style/mediumProductRegularStyle"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@null"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:textColorHint="@color/colorGray1"
                    tools:ignore="UnusedAttribute"/>

            <View

                    android:layout_width="match_parent"
                    android:layout_height="0.2dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/colorGray1"/>
            <TextView
                    android:id="@+id/error_pass"
                    style="@style/ExtraProductRegularStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_9sdp"
                    android:text="@string/please_enter_a_password"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:visibility="gone"
                    android:textColor="@color/colorOrange"
            />


            <Button
                    android:id="@+id/btn_login"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@drawable/create_account_btn_bg"
                    android:fontFamily="@font/product_sans_bold"
                    android:text="@string/login"
                    android:backgroundTint="@color/colorBlack3"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"/>

            <TextView
                    style="@style/SmallProductRegularStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_5sdp"
                    android:text="@string/or_sign_in_with"
                    android:textColor="@color/colorBlack3"/>


            <ImageView
                    android:id="@+id/iv_fb"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:srcCompat="@drawable/ic_fb_login"/>


            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_40sdp">

                <TextView
                        android:id="@+id/tv_new_account"
                        style="@style/SmallProductRegularStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_an_account"
                        android:textColor="@color/colorBlack3"/>

                <TextView
                        android:id="@+id/tv_forgotpass"
                        style="@style/SmallProductRegularStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/forgot_password"
                        android:textColor="@color/colorBlack3"/>


            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>


</ScrollView>