<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                tools:context=".ui.authentication.signup.CreateUserActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/wdessw"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_ico_welcome_img"/>


        <TextView
                style="@style/largeProductBoldtyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/welcome_to_doviesfitness"
                android:textColor="@color/colorBlack"/>

        <TextView
                android:id="@+id/tv_name"
                style="@style/largeProductBoldtyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:text=""
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"/>

        <TextView
                style="@style/SmallProductRegularStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/time_to_create_and_share_your"
                android:textColor="@color/colorLightBlack"/>


        <TextView
                style="@style/SmallProductRegularStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/workout_with_friends_and_family"
                android:textColor="@color/colorLightBlack"/>


    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:orientation="vertical">

        <TextView
                style="@style/ExtraSmallProductBoldStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/_8sdp"
                android:text="@string/always_remenber_we"
                android:textColor="@color/colorGray8"/>

        <TextView
                style="@style/ExtraSmallProductBoldStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/_8sdp"
                android:text="@string/are_here_to_inspire"
                android:textColor="@color/colorGray8"/>

        <TextView
                style="@style/ExtraSmallProductBoldStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/_8sdp"
                android:text="@string/help_and_motivate_you"
                android:textColor="@color/colorGray8"/>


    </LinearLayout>

    <ImageView
            android:id="@+id/iv_next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:scaleType="center"
            android:textAllCaps="false"
            android:tint="@color/colorBlack"
            app:srcCompat="@drawable/ic_left_arrow_white"/>

</RelativeLayout>